--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1166,7 +1166,7 @@ section,
 }
 
 .venue .venue-info {
-  background: url("../img/venue-gallery/building_project.jpg") top center no-repeat;
+  background: url("../img/venue-gallery/Research_School_of_Physics\,_ANU\,_Canberra\,_2022\,_01.jpg") top center no-repeat;
   background-size: cover;
   position: relative;
   padding-top: 60px;
